2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/ui/search.py:

	Add auto_search mode, which is enabled by default.
	Add optional columns, callback parameters to add_filter,
	to make it easier to integrate with the query executer.
	Add a generic query callback to the SQLObject executer.
	Use new api in example.
	
2007-04-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (DateSearchFilter.select): Add and reorganize
	internals a bit to be able to select by option_type.

2007-04-25  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py (ObjectList.grab_focus): 
	Add, fixes #3326

2007-04-20  Johan Dahlin  <jdahlin@async.com.br>

	* examples/search.py: Add an example.
	* kiwi/ui/search.py (DateSearchFilter): Make sure that you cannot
	select a start date after the end date and an end date before the 
	start date. Add some comments explaning what's going on since the
	code is not that trivial any longer.

2007-04-19  Johan Dahlin  <jdahlin@async.com.br>

	* README: Mention that SQLObject is an optional dependency

	* kiwi/db/__init__.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/enums.py:
	* kiwi/interfaces.py:
	* kiwi/ui/search.py:

	Add a SearchContainer plus database independent infrastructure to
	construct queries. Include a SQLObject plugin

2007-04-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (ProxyComboBoxEntry.insert_item)
	(ProxyComboBox.insert_item, _EasyComboBoxHelper.insert_item): 
	Implement insert_item.

2007-04-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.set_date): Allow None which 
	means reset the date
	(DateEntry.get_date): Never return ValueUnset.

	* kiwi/ui/objectlist.py (ObjectList.sort_by_attribute): 
	Add. Fixes #3311, based on patch by Ali Afshar.

2007-04-16  Ali Afshar <aafshar@gmail.com>
